roughly finish implementing particle filter, created particle filter_node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,34 @@
 cmake_minimum_required(VERSION 3.10)
 
 # set the project name
-project(2D_slam)
+project(slam_pt_filter)
 
-# add the executable
-add_executable(slam slam.cpp)
+# dependencies
+find_package(catkin REQUIRED COMPONENTS
+  roscpp
+  sensor_msgs
+  geometry_msgs
+  std_msgs
+  rosbag
+  tf2
+)
+find_package(Eigen3)
+
+catkin_package(
+ CATKIN_DEPENDS nav_msgs roscpp rospy sensor_msgs std_msg tf2 geometry_msgs eigen_conversions
+ DEPENDS EIGEN3
+)
 
 # include directories
-include_directories("/usr/include/eigen3")
-# include_directories("/home/jiuzhou/vscode_project/slam-with-a-particle-filter")
+include_directories(
+  src
+  ${catkin_INCLUDE_DIRS}
+  ${EIGEN3_INCLUDE_DIR}
+)
+
+# add the executable
+add_executable(data_visualize_node src/visualize_laserscan.cpp)
+target_link_libraries(data_visualize_node ${catkin_LIBRARIES})
+
+add_executable(particle_function_test src/test.cpp)
+target_link_libraries(particle_function_test ${catkin_LIBRARIES})
